<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="48dp"
    tools:context=".SettingsMenuFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="@string/fragment_settings_menu_title"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/displaySettingsButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:text="@string/settings_display" />

    <Button
        android:id="@+id/networkSettingsButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_network" />

    <Button
        android:id="@+id/aboutSettingsButton"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/settings_about" />

</LinearLayout>
